--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -1,1 +1,1 @@
-.test{display:inline;color:purple;background:#4169e1}
+.hello-world{color:#123456;font-family:'Courier New',Courier,monospace;font-weight:700}
