--- a/src/style/base/_variables.scss
+++ b/src/style/base/_variables.scss
@@ -1,9 +1,19 @@
+$button-border-radius: 4px;
+$button-link-background-color-focus: $color-additional-white;
+$button-link-color-active: $color-additional-white;
+$button-link-color-focus: $color-typography-main;
+$button-link-color-inactive: $color-typography-secondary;
+$button-margin-horizontal: get-rem(13);
+$button-padding: get-rem(10);
+
+$global-transition-duration: 0.2s;
+
 $header-background-color: $color-main-black;
-$header-height: getRem(58);
+$header-height: get-rem(58);
 $header-text-color: $color-additional-white;
 
 $filter-background-color: $color-additional-white;
-$filter-height: getRem(48);
+$filter-height: get-rem(48);
 
 $main-background-color: $color-main-gray;
-$main-max-width: getRem(1164);
+$main-max-width: get-rem(1200);
