--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,7 @@
 @import './base/colors';
+@import './base/fonts';
 @import './base/functions';
 @import './base/variables';
 
 @import './mixins/mixins';
+@import './mixins/typography';
