--- a/src/style/base/_colors.scss
+++ b/src/style/base/_colors.scss
@@ -5,5 +5,5 @@ $color-main-blue: #30aed6;
 $color-main-gray: #f0f0f1;
 $color-main-red: #ce363d;
 
-$color-typography-main: #13191b;
+$color-typography-main: $color-main-black;
 $color-typography-secondary: #7b8487;
