--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -4,27 +4,10 @@
     $this: &;
 
     @include transition-animation(background-color);
-    @include typography-header();
+    @include typography-button();
 
     background-color: transparent;
     border: none;
+    cursor: pointer;
     display: inline-flex;
-
-    &--link {
-        border-radius: $global-border-radius;
-        color: $button-link-color-inactive;
-        margin: $button-link-margin;
-        padding: $button-link-padding;
-        text-decoration: none;
-
-        &#{$this}--active {
-            color: $button-link-color-active;
-        }
-
-        &:focus,
-        &:hover {
-            background-color: $button-link-background-color-focus;
-            color: $button-link-color-focus;
-        }
-    }
 }
