--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -4,7 +4,7 @@
     $this: &;
 
     @include transition-animation(background-color);
-    @include typography-button();
+    @include typography-main-secondary-bolded();
 
     background-color: transparent;
     border: none;
