--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,7 +1,7 @@
 @import '../../style/index';
 
 .card {
-    @include column-layout(1);
+    display: inline-flex;
 
     background-color: $card-background-color;
     border-radius: $global-border-radius;
@@ -9,5 +9,5 @@
     margin: $card-margin;
     max-width: $card-max-width;
     min-width: $card-min-width;
-    padding: $card-padding;
+    overflow: hidden;
 }
